Namespace string is not being parsed correctly

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 5.2.0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Execution Team 2021-11-29
    • 4
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A collection with the full namespace "test.system.buckets.../qa" should be a valid namespace, since the collection name starts with a letter character ("system...").

      However, it looks like we are doing some incorrect parsing that is leading us to think that the collection name is "../qa". This error is thrown for certain commands such as collStats, but isn't when we create a collection.

      Please see comments for more information.

            Assignee:
            Daniel Gomez Ferro
            Reporter:
            Vishnu Kaushik
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: