SERVER-60572 Validate collection name for system.buckets.* namespaces