src/mongo/db/namespace_string.cpp
@@ -188,7 +188,8 @@ bool NamespaceString::isLegalClientSystemNS(
     if (isTemporaryReshardingCollection()) {
         return true;
     }
-    if (isTimeseriesBucketsCollection()) {
+    if (isTimeseriesBucketsCollection() &&
+        validCollectionName(coll().substr(kTimeseriesBucketsCollectionPrefix.size()))) {
         return true;
     }
     if (isChangeStreamPreImagesCollection()) {
