src/mongo/db/namespace_string_test.cpp
@@ -127,6 +127,15 @@ TEST(NamespaceStringTest, IsCollectionlessCursorNamespace) {
     ASSERT_FALSE(NamespaceString{"$cmd.listCollections"}.isCollectionlessCursorNamespace());
 }
 
+TEST(NamespaceStringTest, IsLegalClientSystemNamespace) {
+    const auto& currentFCV = serverGlobalParams.featureCompatibility;
+    ASSERT_TRUE(NamespaceString{"test.system.buckets.1234"}.isLegalClientSystemNS(currentFCV));
+    ASSERT_TRUE(NamespaceString{"test.system.buckets.abcde"}.isLegalClientSystemNS(currentFCV));
+    ASSERT_FALSE(NamespaceString{"test.system.buckets..1234"}.isLegalClientSystemNS(currentFCV));
+    ASSERT_FALSE(NamespaceString{"test.system.buckets.a234$"}.isLegalClientSystemNS(currentFCV));
+    ASSERT_FALSE(NamespaceString{"test.system.buckets."}.isLegalClientSystemNS(currentFCV));
+}
+
 TEST(NamespaceStringTest, IsDropPendingNamespace) {
     ASSERT_TRUE(NamespaceString{"test.system.drop.0i0t-1.foo"}.isDropPendingNamespace());
     ASSERT_TRUE(NamespaceString{"test.system.drop.1234567i8t9.foo"}.isDropPendingNamespace());
